# tower-defense

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  PHASE_2.md  PHASE_3.md  PHASE_4.md  README.md  TESTING_IMPLEMENTATION.md  build.bat  build.spec  game.py  getClassDetails.py  getClassNames.py  main.py  meta.py  mypy.ini  output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  stderr.txt  towerDefense.spec
.claude/: settings.local.json
.github/workflows/: tests.yml
board/: game_board.py
docs/: AGENT_ONBOARDING.md  ARCHITECTURE.md  CODEBASE_REVIEW_NOTES.md  FOUNDATION_INDEX.md  WORKFLOWS.md
docs/skills/: SKILL_TEST_REHABILITATION.md  SKILL_TRIAGE_GAMEPLAY_BUG.md  SKILL_UI_EVENT_ROUTING.md
entities/enemies/: basic_enemy.py  enemy.py  enemy_wave.py  fast_enemy.py  flying_enemy.py  healer_enemy.py  siege_enemy.py  stealth_enemy.py  swarm_enemy.py  tank_enemy.py
entities/gems/: fire_gem.py  gem.py  ice_gem.py
entities/power_ups/: speed_boost.py
entities/projectiles/: bullet.py  missile.py  projectile.py
entities/towers/: tower.py
game/: game.py  tower_manager.py
instance/: plan.txt  savegame_slot3.json
issues/completed/: ISSUE-001-spawn-pipeline-inconsistency.md  ISSUE-002-ui-slider-dispatch-signature-mismatch.md  ISSUE-003-skills-screen-button-tracking-broken.md  ISSUE-004-frame-timing-main-loop-double-tick.md  ISSUE-005-coordinate-model-inconsistency.md
issues/open/: ISSUE-006-relative-path-fragility.md  ISSUE-007-test-suite-rehabilitation.md  ISSUE-008-tower-attack-speed-stacks-every-frame.md  ISSUE-009-game-over-level-completion-condition-never-true.md  ISSUE-010-active-wave-removal-during-iteration-skips-updates.md  ISSUE-011-base-entity-draw-uses-undefined-position-fields.md  ISSUE-012-test-suite-contains-syntax-invalid-placeholder-tests.md  ISSUE-013-test-module-paths-and-apis-out-of-sync-with-runtime.md  ISSUE-014-pathfinding-core-function-is-unimplemented.md  ISSUE-015-collision-manager-uses-inconsistent-position-contract.md
src/: config.py  main.py
src/board/: game_board.py  tower_selection_panel.py  wave_panel.py
src/config/: TestLevels V1.json  TestLevels V2.json  TestLevels.json  (+3 more)
utils/: collision.py  helpers.py  pathfinding.py
(+124 files in other folders)
